chore: create file to text

--- a/portifolio/src/locales/en.json
+++ b/portifolio/src/locales/en.json
@@ -1,3 +1,28 @@
 {
-  "button.toggle": "Toggle Language"
+  "navbar.about": "About",
+  "navbar.projects": "Projects",
+  "navbar.skills": "Skills",
+  "navbar.contact": "Contact",
+  "github.profile": "github profile",
+  "button.toggle": "Toggle Language",
+  "button.getInTouch": "Get in touch",
+  "button.viewMyWorks": "View my works",
+  "cover.title": " Fullstack Web Developer, from Brazil.",
+  "cover.titleSpan": "Hi, I'm Rafael,",
+  "cover.subtitle": "A Fullstack Web Developer, based in Brazil. I have a passion for development and love to create for web and mobile devices.",
+  "projects.title": "Look at Some",
+  "projects.titleSpan": "Projects",
+  "projects.subtitle1": "Here are a few projects developed by me",
+  "projects.subtitle2": "You can see more on my",
+  "projectCard.link": "View Project",
+  "about.name": "Rafael Brandão",
+  "about.title": "Fullstack Web Developer",
+  "about.paragraph1": "Born in Borda da Mata, Minas Gerais, Brazil, in 1992, I stand out as a highly engaged Full-Stack developer, whose passion for technology, science, astronomy, games, sports and motorsport fuels my creativity and innovation in several areas.",
+  "about.paragraph2": "My technical skills are robust, covering HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Tests, NodeJS, Object Oriented Programming (OOP), SOLID principles, TypeScript, Python, algorithm complexity, data structures, MySQL and MongoDB. My commitment to constant evolution drives me to seek new challenges and expand my knowledge, as demonstrated by the Flutter course I am currently completing, further expanding the versatility of my portfolio.",
+  "about.paragraph3": "I am a highly motivated professional, with a strong sense of responsibility and a great ability to work in teams. I am also passionate about learning new technologies and applying them to projects, as well as sharing my knowledge with others.",
+  "about.paragraph4": "My unwavering commitment to quality ensures my ability to handle any project, bringing efficient solutions and excellent results. If you are looking for a Full-Stack developer who is always willing to learn, I invite you to explore my profile on Github and learn more about my trajectory and skills. Regardless of whether you are starting a website from scratch or looking for assistance on an existing project, I am prepared to offer appropriate solutions and exceed expectations.",
+  "skills.title": "My",
+  "skills.titleSpan": "Skills",
+  "skills.subtitle": "Here are a few skills developed by me.",
+  "skills.subtitle2": "You can see more on my"
 }
