--- a/portifolio/src/locales/pt.json
+++ b/portifolio/src/locales/pt.json
@@ -1,3 +1,28 @@
 {
-  "button.toggle": "Alternar Idioma"
+  "navbar.about": "Sobre",
+  "navbar.projects": "Projetos",
+  "navbar.skills": "Habilidades",
+  "navbar.contact": "Contato",
+  "github.profile": "perfil no GitHub",
+  "button.toggle": "Alternar Idioma",
+  "button.getInTouch": "Entre em contato",
+  "button.viewMyWorks": "Veja meus trabalhos",
+  "cover.title": "Desenvolvedor Web Fullstack, do Brasil.",
+  "cover.titleSpan": "Oi, eu sou o Rafael,",
+  "cover.subtitle": "Um desenvolvedor web Fullstack, baseado no Brasil. Eu tenho paixão pelo desenvolvimento e adoro criar para web e dispositivos móveis.",
+  "projects.title": "Veja Alguns",
+  "projects.titleSpan": "Projetos",
+  "projects.subtitle1": "Aqui estão alguns projetos desenvolvidos por mim",
+  "projects.subtitle2": "Você pode ver mais no meu",
+  "projectCard.link": "Ver Projeto",
+  "about.name": "Rafael Brandão",
+  "about.title": "Desenvolvedor Web Fullstack",
+  "about.paragraph1": "Nascido em Borda da Mata, Minas Gerais, Brasil, em 1992, destaco-me como um desenvolvedor Full-Stack altamente engajado, cuja paixão por tecnologia, ciência, astronomia, jogos, esportes e automobilismo alimenta minha criatividade e inovação em diversas áreas.",
+  "about.paragraph2": "Minhas habilidades técnicas são robustas, abrangendo HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Testes, NodeJS, Programação Orientada a Objetos (OOP), princípios SOLID, TypeScript, Python, complexidade de algoritmos, estruturas de dados, MySQL e MongoDB. Meu compromisso com a evolução constante me impulsiona a buscar novos desafios e expandir meu conhecimento, como demonstrado pelo curso de Flutter que estou concluindo atualmente, ampliando ainda mais a versatilidade do meu portfólio.",
+  "about.paragraph3": "Sou um profissional altamente motivado, com um forte senso de responsabilidade e grande habilidade para trabalhar em equipe. Também sou apaixonado por aprender novas tecnologias e aplicá-las em projetos, além de compartilhar meu conhecimento com os outros.",
+  "about.paragraph4": "Meu compromisso inabalável com a qualidade garante minha capacidade de lidar com qualquer projeto, oferecendo soluções eficientes e excelentes resultados. Se você está procurando um desenvolvedor Full-Stack sempre disposto a aprender, convido você a explorar meu perfil no GitHub e conhecer mais sobre minha trajetória e habilidades. Independentemente de estar começando um site do zero ou procurando ajuda em um projeto existente, estou preparado para oferecer soluções adequadas e superar as expectativas.",
+  "skills.title": "Minhas",
+  "skills.titleSpan": "Habilidades",
+  "skills.subtitle": "Aqui estão algumas habilidades desenvolvidas por mim.",
+  "skills.subtitle2": "Você pode ver mais no meu"
 }
