refactor: change project description to be translable

--- a/portifolio/src/locales/en.json
+++ b/portifolio/src/locales/en.json
@@ -15,7 +15,12 @@
   "projects.subtitle1": "Here are a few projects developed by me",
   "projects.subtitle2": "You can see more on my",
   "projectCard.link": "View Project",
-  "about.name": "Rafael Brandão",
+  "projectCard.description1": "Project developed during Trybe's Front-End module. The goal was to develop a music application using React.",
+  "projectCard.description2": "Project developed during Trybe's Front-End module. The goal was to develop a solar system using React.",
+  "projectCard.description3": "Project developed during Trybe's Front-End module. The goal was to develop a wallet application using React.",
+  "projectCard.description4": "Project developed during Trybe's Front-End module. The goal was to develop a super trunfo application using React.",
+  "projectCard.description5": "Project developed during Trybe's Back-End module. The goal was to develop a car shop application using Node.js, Typescript, Mongoose and MongoDb.",
+  "projectCard.description6": "Project developed during Trybe's Back-End module. The goal was to develop a Trybers and Dragons application using Node.js, Typescript, OOP and SOLID.",
   "about.title": "Fullstack Web Developer",
   "about.paragraph1": "Born in Borda da Mata, Minas Gerais, Brazil, in 1992, I stand out as a highly engaged Full-Stack developer, whose passion for technology, science, astronomy, games, sports and motorsport fuels my creativity and innovation in several areas.",
   "about.paragraph2": "My technical skills are robust, covering HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Tests, NodeJS, Object Oriented Programming (OOP), SOLID principles, TypeScript, Python, algorithm complexity, data structures, MySQL and MongoDB. My commitment to constant evolution drives me to seek new challenges and expand my knowledge, as demonstrated by the Flutter course I am currently completing, further expanding the versatility of my portfolio.",
