--- a/portifolio/src/locales/pt.json
+++ b/portifolio/src/locales/pt.json
@@ -10,12 +10,17 @@
   "cover.title": "Desenvolvedor Web Fullstack, do Brasil.",
   "cover.titleSpan": "Oi, eu sou o Rafael,",
   "cover.subtitle": "Um desenvolvedor web Fullstack, baseado no Brasil. Eu tenho paixão pelo desenvolvimento e adoro criar para web e dispositivos móveis.",
-  "projects.title": "Veja Alguns",
+  "projects.title": "Veja alguns",
   "projects.titleSpan": "Projetos",
   "projects.subtitle1": "Aqui estão alguns projetos desenvolvidos por mim",
   "projects.subtitle2": "Você pode ver mais no meu",
   "projectCard.link": "Ver Projeto",
-  "about.name": "Rafael Brandão",
+  "projectCard.description1": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de música usando React.",
+  "projectCard.description2": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver um sistema solar usando React.",
+  "projectCard.description3": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de carteira usando React.",
+  "projectCard.description4": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de Super Trunfo usando React.",
+  "projectCard.description5": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação de loja de carros usando Node.js, Typescript, Mongoose e MongoDB.",
+  "projectCard.description6": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação Trybers and Dragons usando Node.js, Typescript, OOP e SOLID.",
   "about.title": "Desenvolvedor Web Fullstack",
   "about.paragraph1": "Nascido em Borda da Mata, Minas Gerais, Brasil, em 1992, destaco-me como um desenvolvedor Full-Stack altamente engajado, cuja paixão por tecnologia, ciência, astronomia, jogos, esportes e automobilismo alimenta minha criatividade e inovação em diversas áreas.",
   "about.paragraph2": "Minhas habilidades técnicas são robustas, abrangendo HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Testes, NodeJS, Programação Orientada a Objetos (OOP), princípios SOLID, TypeScript, Python, complexidade de algoritmos, estruturas de dados, MySQL e MongoDB. Meu compromisso com a evolução constante me impulsiona a buscar novos desafios e expandir meu conhecimento, como demonstrado pelo curso de Flutter que estou concluindo atualmente, ampliando ainda mais a versatilidade do meu portfólio.",
