--- a/portifolio/src/locales/en.json
+++ b/portifolio/src/locales/en.json
@@ -7,6 +7,7 @@
   "button.toggle": "Toggle Language",
   "button.getInTouch": "Get in touch",
   "button.viewMyWorks": "View my works",
+  "button.submit": "SUBMIT NOW",
   "cover.title": " Fullstack Web Developer, from Brazil.",
   "cover.titleSpan": "Hi, I'm Rafael,",
   "cover.subtitle": "A Fullstack Web Developer, based in Brazil. I have a passion for development and love to create for web and mobile devices.",
@@ -29,5 +30,10 @@
   "skills.title": "My",
   "skills.titleSpan": "Skills",
   "skills.subtitle": "Here are a few skills developed by me.",
-  "skills.subtitle2": "You can see more on my"
+  "skills.subtitle2": "You can see more on my",
+  "contact.title": "Get in touch",
+  "contact.subtitle": "Have a project in mind? Looking for a developer to your team? Want to know more about me? Feel free to contact me in one of the channels below or reach out throught form and I will get back to you as soon as possible.",
+  "contact.form.name": "Your Name",
+  "contact.form.email": "Your Email",
+  "contact.form.message": "Tell me a bit more what you are looking for"
 }
