feat: add route to buttons

--- a/portifolio/src/locales/pt.json
+++ b/portifolio/src/locales/pt.json
@@ -8,13 +8,13 @@
   "button.getInTouch": "Entre em contato",
   "button.viewMyWorks": "Veja meus trabalhos",
   "button.submit": "ENVIAR",
-  "cover.title": "Desenvolvedor Web Fullstack, do Brasil.",
-  "cover.titleSpan": "Oi, eu sou o Rafael,",
+  "cover.title": "Desenvolvedor Web Fullstack, no Brasil.",
+  "cover.titleSpan": "Oi, eu sou Rafael,",
   "cover.subtitle": "Um desenvolvedor web Fullstack, baseado no Brasil. Eu tenho paixão pelo desenvolvimento e adoro criar para web e dispositivos móveis.",
   "projects.title": "Veja alguns",
   "projects.titleSpan": "Projetos",
   "projects.subtitle1": "Aqui estão alguns projetos desenvolvidos por mim",
-  "projects.subtitle2": "Você pode ver mais no meu",
+  "projects.subtitle2": "Você pode ver mais projetos no meu",
   "projectCard.link": "Ver Projeto",
   "projectCard.description1": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de música usando React.",
   "projectCard.description2": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver um sistema solar usando React.",
@@ -23,10 +23,10 @@
   "projectCard.description5": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação de loja de carros usando Node.js, Typescript, Mongoose e MongoDB.",
   "projectCard.description6": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação Trybers and Dragons usando Node.js, Typescript, OOP e SOLID.",
   "about.title": "Desenvolvedor Web Fullstack",
-  "about.paragraph1": "Nascido em Borda da Mata, Minas Gerais, Brasil, em 1992, destaco-me como um desenvolvedor Full-Stack altamente engajado, cuja paixão por tecnologia, ciência, astronomia, jogos, esportes e automobilismo alimenta minha criatividade e inovação em diversas áreas.",
-  "about.paragraph2": "Minhas habilidades técnicas são robustas, abrangendo HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Testes, NodeJS, Programação Orientada a Objetos (OOP), princípios SOLID, TypeScript, Python, complexidade de algoritmos, estruturas de dados, MySQL e MongoDB. Meu compromisso com a evolução constante me impulsiona a buscar novos desafios e expandir meu conhecimento, como demonstrado pelo curso de Flutter que estou concluindo atualmente, ampliando ainda mais a versatilidade do meu portfólio.",
-  "about.paragraph3": "Sou um profissional altamente motivado, com um forte senso de responsabilidade e grande habilidade para trabalhar em equipe. Também sou apaixonado por aprender novas tecnologias e aplicá-las em projetos, além de compartilhar meu conhecimento com os outros.",
-  "about.paragraph4": "Meu compromisso inabalável com a qualidade garante minha capacidade de lidar com qualquer projeto, oferecendo soluções eficientes e excelentes resultados. Se você está procurando um desenvolvedor Full-Stack sempre disposto a aprender, convido você a explorar meu perfil no GitHub e conhecer mais sobre minha trajetória e habilidades. Independentemente de estar começando um site do zero ou procurando ajuda em um projeto existente, estou preparado para oferecer soluções adequadas e superar as expectativas.",
+  "about.paragraph1": "Nasci em Borda da Mata, Minas Gerais, Brasil, no ano de 1992. Sou um desenvolvedor Full-Stack altamente engajado, e minha paixão por tecnologia, ciência, astronomia, jogos, esportes e automobilismo impulsiona minha criatividade e inovação em várias áreas.",
+  "about.paragraph2": "Possuo habilidades técnicas abrangentes, com sólido conhecimento em HTML, CSS, JavaScript, ReactJS, ContextAPI, Hooks, Redux, Testes, NodeJS, Programação Orientada a Objetos (OOP), princípios SOLID, TypeScript, Python, complexidade de algoritmos, estruturas de dados, MySQL e MongoDB. Estou sempre comprometido com minha evolução contínua, buscando constantemente novos desafios e ampliando meu conhecimento. Como prova disso, atualmente estou concluindo um curso de Flutter, o que acrescentará ainda mais versatilidade ao meu portfólio.",
+  "about.paragraph3": "Sou um profissional altamente motivado, possuindo um forte senso de responsabilidade e excelentes habilidades de trabalho em equipe. Tenho uma paixão genuína por aprender novas tecnologias e aplicá-las em projetos, além de estar sempre disposto a compartilhar meu conhecimento com os outros.",
+  "about.paragraph4": "Meu compromisso inabalável com a qualidade assegura minha capacidade de lidar com qualquer projeto, fornecendo soluções eficientes e resultados excelentes. Se você está em busca de um desenvolvedor Full-Stack sempre disposto a aprender, convido-o a explorar meu perfil no GitHub e conhecer mais sobre minha trajetória e habilidades. Independentemente de estar iniciando um site do zero ou buscando assistência em um projeto existente, estou preparado para oferecer soluções adequadas e superar expectativas.",
   "skills.title": "Minhas",
   "skills.titleSpan": "Habilidades",
   "skills.subtitle": "Aqui estão algumas habilidades desenvolvidas por mim.",
