style: for button language toggle

--- a/portifolio/src/locales/en.json
+++ b/portifolio/src/locales/en.json
@@ -4,7 +4,7 @@
   "navbar.skills": "Skills",
   "navbar.contact": "Contact",
   "github.profile": "github profile",
-  "button.toggle": "Toggle Language",
+  "button.toggle": " Português",
   "button.getInTouch": "Get in touch",
   "button.viewMyWorks": "View my works",
   "button.submit": "SUBMIT NOW",
