--- a/portifolio/src/locales/pt.json
+++ b/portifolio/src/locales/pt.json
@@ -4,7 +4,7 @@
   "navbar.skills": "Habilidades",
   "navbar.contact": "Contato",
   "github.profile": "perfil no GitHub",
-  "button.toggle": "Alternar Idioma",
+  "button.toggle": " English",
   "button.getInTouch": "Entre em contato",
   "button.viewMyWorks": "Veja meus trabalhos",
   "button.submit": "ENVIAR",
