refactor: change text from button download resume

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -6,9 +6,9 @@
   "github.profile": "github profile",
   "button.toggle": " Português",
   "button.getInTouch": "Get in touch",
-  "button.viewMyWorks": "View my works",
+  "button.download": "Download Resume",
   "button.submit": "SUBMIT NOW",
-  "cover.title": " Fullstack Web Developer, from Brazil.",
+  "cover.title": " Fullstack Web Developer from Brazil.",
   "cover.titleSpan": "Hi, I'm Rafael,",
   "cover.subtitle": "A Fullstack Web Developer, based in Brazil. I have a passion for development and love to create for web and mobile devices.",
   "projects.title": "Look at Some",
