--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -6,9 +6,9 @@
   "github.profile": "perfil no GitHub",
   "button.toggle": " English",
   "button.getInTouch": "Entre em contato",
-  "button.viewMyWorks": "Veja meus trabalhos",
+  "button.download": "Download CV",
   "button.submit": "ENVIAR",
-  "cover.title": "Desenvolvedor Web Fullstack, no Brasil.",
+  "cover.title": "Desenvolvedor Web Fullstack no Brasil.",
   "cover.titleSpan": "Oi, eu sou Rafael,",
   "cover.subtitle": "Um desenvolvedor web Fullstack, baseado no Brasil. Eu tenho paixão pelo desenvolvimento e adoro criar para web e dispositivos móveis.",
   "projects.title": "Veja alguns",
