feat: change project and resume

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -19,7 +19,7 @@
   "projectCard.description1": "Project developed during Trybe's Front-End module. The goal was to develop a music application using React.",
   "projectCard.description2": "Project developed during Trybe's Front-End module. The goal was to develop a solar system using React.",
   "projectCard.description3": "Project developed during Trybe's Front-End module. The goal was to develop a wallet application using React.",
-  "projectCard.description4": "Project developed during Trybe's Front-End module. The goal was to develop a super trunfo application using React.",
+  "projectCard.description4": "Project developed to learn concepts of Styled-components, make with React and Typescript in front-end and Node.js, Express, Mongoose and MongoDb in back-end.",
   "projectCard.description5": "Project developed during Trybe's Back-End module. The goal was to develop a car shop application using Node.js, Typescript, Mongoose and MongoDb.",
   "projectCard.description6": "Project developed during Trybe's Back-End module. The goal was to develop a Trybers and Dragons application using Node.js, Typescript, OOP and SOLID.",
   "about.title": "Fullstack Web Developer",
