--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -19,7 +19,7 @@
   "projectCard.description1": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de música usando React.",
   "projectCard.description2": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver um sistema solar usando React.",
   "projectCard.description3": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de carteira usando React.",
-  "projectCard.description4": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de Super Trunfo usando React.",
+  "projectCard.description4": "Projeto desenvolvido para aprender os conceitos de Styled-components, feito em React and Typescript no front-end e Node.js, Express, Mongoose and MongoDb no back-end.",
   "projectCard.description5": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação de loja de carros usando Node.js, Typescript, Mongoose e MongoDB.",
   "projectCard.description6": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação Trybers and Dragons usando Node.js, Typescript, OOP e SOLID.",
   "about.title": "Desenvolvedor Web Fullstack",
