--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -17,7 +17,7 @@
   "projects.subtitle2": "Você pode ver mais projetos no meu",
   "projectCard.link": "Ver Projeto",
   "projectCard.description1": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de música usando React.",
-  "projectCard.description2": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver um sistema solar usando React.",
+  "projectCard.description2": "Projeto Flutter: Rastreamento de avião em tempo real e status do sistema para X-Plane 11.",
   "projectCard.description3": "Projeto desenvolvido durante o módulo de Front-End da Trybe. O objetivo era desenvolver uma aplicação de carteira usando React.",
   "projectCard.description4": "Projeto desenvolvido para aprender os conceitos de Styled-components, feito em React and Typescript no front-end e Node.js, Express, Mongoose and MongoDb no back-end.",
   "projectCard.description5": "Projeto desenvolvido durante o módulo de Back-End da Trybe. O objetivo era desenvolver uma aplicação de loja de carros usando Node.js, Typescript, Mongoose e MongoDB.",
